@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - fixed history viewing of log files (Eugene)
  - added images for oracle(Eugene)
  - added images for sqlite3(Eugene)
 
